--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="email">
                             <label for="input-email">Email</label>
-                            <input type="email" class="input-form" id="input-email">
+                            <input type="email" class="input-form" id="input-email" required>
                         </div>
                         <div class="password">
                             <label for="input-password">Password</label>
@@ -193,8 +193,8 @@
                             <button class="btn btn-primary" id="next-btn">Next<i
                                     class="fa-solid fa-arrow-right"></i></button>
                         </div>
-                        <div class="submit">
-                            <button class="btn btn-primary none" id="submit-btn"><i
+                        <div class="submit none">
+                            <button class="btn btn-primary" id="submit-btn"><i
                                     class="fa-solid fa-check"></i>Submit</button>
                         </div>
                     </div>
